syntax = "proto3";
package affiliate.pb;
option go_package = "/affiliate";

enum GlobalErrorCode{
  SUCCESS = 0;
  ERROR_FAIL = 1000;
  ERROR_JSON_BIND =1001;
  ERROR_INVALID_PARAMS = 1002;
  ERROR_DATABASE =1003;
  ERROR_JSON_UNMARSHAL =1004;
  ERROR_REDIS =1005;
  ERROR_USER_NOT_FOUND =1006;
  ERROR_USER_NAME_EXISTS = 1007;
  ERROR_USER_EMAIL_EXISTS = 1008;
  ERROR_ENTITY_NAME_EXISTS = 1009;
  ERROR_REFERRAL_CODE_EXISTS = 1010;
  ERROR_LOGIN_FAIL = 1011;
  ERROR_NOT_AUTHORISED = 1012;
  ERROR_NO_ACCESS = 1013;
  ERROR_LOGOUT_FAIL = 1014;
  ERROR_TOKEN_ERROR = 1015;
  ERROR_CACHE_MISS = 1016;
}

enum UserRole{
  ROLE_AFFILIATE = 0;
  ROLE_ADMIN = 1;
  ROLE_DEV = 2;
}

enum AffiliateType{
  AFFILIATE_TYPE_ACCOMMODATION = 0;
  AFFILIATE_TYPE_RIDE_HAILING = 1;
}

enum ReferralStatus{
  REFERRAL_STATUS_SUCCESS = 0;
  REFERRAL_STATUS_PENDING = 1;
  REFERRAL_STATUS_FAILED = 2;
  REFERRAL_STATUS_CANCELLED = 3;
}

enum BookingStatus{
  BOOKING_STATUS_SUCCESS = 0;
  BOOKING_STATUS_PENDING = 1;
  BOOKING_STATUS_FAILED = 2;
  BOOKING_STATUS_CANCELLED = 3;
}

enum PaymentStatus{
  PAYMENT_STATUS_SUCCESS = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_FAILED = 2;
  PAYMENT_STATUS_REFUNDED = 3;
}

enum TicketType{
  TICKET_TYPE_CITIZEN = 0;
  TICKET_TYPE_TOURIST = 1;
}

enum TicketSlot{
  SLOT_CORGI_1030_1200 = 0;
  SLOT_CORGI_1230_1400 = 1;
  SLOT_DOGS_1430_1600 = 2;
  SLOT_DOGS_1700_1830 = 3;
}

enum TimeSelectorPeriod{
  PERIOD_NONE = 0;
  PERIOD_DAY = 1;
  PERIOD_WEEK = 2;
  PERIOD_MONTH = 3;
  PERIOD_RANGE = 4;
  PERIOD_LAST_7_DAYS = 5;
  PERIOD_LAST_28_DAYS = 6;
}

message RequestMeta{
  optional string user_token = 1;
}

message ResponseMeta{
  optional int64 error_code = 1;
  optional string error_msg = 2;
}

message GenericResponse{
  optional ResponseMeta response_meta = 1;
}

//Direct from user_table
message User{
  optional int64 user_id = 1;
  optional string user_name = 2;
  optional string user_email = 3;
  optional string user_contact = 4;
  optional int64 user_role = 5;
  optional int64 create_timestamp = 6;
}

//Direct from affiliate_details_table
message AffiliateDetailsDb{
  optional int64 user_id = 1;
  optional string entity_name = 2;
  optional string entity_identifier = 3;
  optional int64 affiliate_type = 4;
  optional string unique_referral_code = 5;
}

//Joining user_table, affiliate_details_table and referral_table
message AffiliateMeta{
  optional int64 affiliate_id = 1;
  optional string affiliate_name = 2;
  optional int64 affiliate_type = 3;
  optional string unique_referral_code = 4;
  optional int64 referral_count = 5;
  optional int64 referral_clicks = 6;
  optional int64 referral_commission = 7;
  optional int64 total_revenue = 8;
}

//Direct from referral_table
message ReferralDb{
  optional int64 referral_id = 1;
  optional int64 affiliate_id = 2;
  optional int64 referral_click_time = 3;
  optional int64 referral_status = 4;
  optional int64 booking_id = 5;
  optional int64 booking_time = 6;
  optional int64 referral_commission = 7;
}

//Join referral_table, booking_details_table
message ReferralDetails{
  optional int64 referral_id = 1;
  optional int64 affiliate_id = 2;
  optional int64 referral_click_time = 3;
  optional int64 referral_status = 4;
  optional int64 booking_id = 5;
  optional BookingDetails booking_details = 6; //nil if referral is not successful
  optional int64 referral_commission = 7;
}

message ReferralBasic{
  optional int64 referral_id = 1;
  optional int64 referral_click_time = 2;
  optional int64 referral_status = 3;
  optional int64 referral_commission = 4;
  optional int64 booking_ref_id = 5;
  optional int64 booking_time = 6;
  optional int64 total_ticket_count = 7;
  optional int64 total_ticket_amount = 8;
  optional string affiliate_name = 9;
}

message CustomerInfo{
  optional string customer_name = 1;
  optional string customer_mobile = 2;
  optional string customer_email = 3;
  optional int64 ticket_type = 4;
  optional int64 ticket_price = 5;
}

//Direct from booking_details_table
message BookingDetailsDb{
  optional int64 booking_id = 1;
  optional int64 booking_status = 2;
  optional string booking_day = 3;
  optional int64 booking_slot = 4;
  optional int64 transaction_time = 5;
  optional int64 payment_status = 6;
  optional int64 citizen_ticket_count = 7;
  optional int64 tourist_ticket_count = 8;
  optional int64 citizen_ticket_total = 9;
  optional int64 tourist_ticket_total = 10;
  optional bytes customer_info = 11;
}

message BookingBasic{
  optional int64 booking_id = 1;
  optional int64 booking_status = 2;
  optional string booking_day = 3;
  optional int64 booking_slot = 4;
  optional int64 transaction_time = 5;
  optional int64 payment_status = 6;
  optional int64 citizen_ticket_count = 7;
  optional int64 tourist_ticket_count = 8;
  optional int64 ticket_total = 9;
}

message BookingDetails{
  optional int64 booking_id = 1;
  optional int64 booking_status = 2;
  optional string booking_day = 3;
  optional int64 booking_slot = 4;
  optional int64 transaction_time = 5;
  optional int64 payment_status = 6;
  optional int64 citizen_ticket_count = 7;
  optional int64 tourist_ticket_count = 8;
  optional int64 citizen_ticket_total = 9;
  optional int64 tourist_ticket_total = 10;
  repeated CustomerInfo customer_info = 11;
}

message AffiliateMetaTopCommission{
  optional int64 user_id = 1;
  optional string affiliate_name = 2;
  optional int64 affiliate_type = 3;
  optional string unique_referral_code = 4;
  optional int64 total_commission = 5;
  optional int64 previous_cycle_commission = 6;
}

message AffiliateMetaTopReferral{
  optional int64 user_id = 1;
  optional string affiliate_name = 2;
  optional int64 affiliate_type = 3;
  optional string unique_referral_code = 4;
  optional int64 total_referrals = 5;
  optional int64 previous_cycle_referrals = 6;
}

message AffiliateCoreStats{
  optional int64 citizen_ticket_total = 1; //citizen_ticket_total,tourist_ticket_total from referral_table join booking_table
  optional int64 tourist_ticket_total = 2;
  optional int64 total_commission = 3; //SUM(referral_table.referral_commission)
  optional int64 total_active_affiliates = 4; //COUNT(referral_table.affiliate_id)
  optional int64 total_affiliate_bookings = 5; //COUNT(referral_table.referral_id)
}

message AffiliateStats{
  optional AffiliateCoreStats core_stats = 1;
  optional int64 start_time = 4;
  optional int64 end_time = 5;
}

message AffiliateRanking{
  repeated AffiliateMetaTopReferral top_affiliate_referral_list = 1; //By referral count: affiliate_id, COUNT(referral_id) GROUP BY affiliate_id ORDER BY COUNT(referral_id) DESC LIMIT 5
  repeated AffiliateMetaTopCommission top_affiliate_commission_list = 2; //By total commission: affiliate_id, SUM(referral_table.referral_commission) GROUP BY affiliate_id ORDER BY SUM(referral_commission) DESC LIMIT 5
  optional int64 start_time = 3;
  optional int64 end_time = 4;
}

message TimeSelector{
  optional int64 base_ts = 1;
  optional int64 start_ts = 2;
  optional int64 end_ts = 3;
  optional int64 period = 4;
}

//Admin to view all affiliate stats
message GetAffiliateStatsRequest{
  optional RequestMeta request_meta = 1;
  optional TimeSelector time_selector = 2;
}

//Also get time stats based on datepicker start end timestamp
message GetAffiliateStatsResponse{
  optional ResponseMeta response_meta = 1;
  optional AffiliateStats affiliate_stats = 2;
  optional AffiliateStats affiliate_stats_previous_cycle = 3;
}

//Admin to view top affiliates
message GetAffiliateRankingListRequest{
  optional RequestMeta request_meta = 1;
}

message GetAffiliateRankingListResponse{
  optional ResponseMeta response_meta = 1;
  optional AffiliateRanking affiliate_ranking = 2;
}

message AffiliateCoreTimedStats{
  optional string date_string = 1;
  optional int64 citizen_ticket_total = 2; //citizen_ticket_total,tourist_ticket_total from referral_table join booking_table
  optional int64 tourist_ticket_total = 3;
  optional int64 total_commission = 4; //SUM(referral_table.referral_commission)
  optional int64 total_active_affiliates = 5; //COUNT(referral_table.affiliate_id)
  optional int64 total_affiliate_bookings = 6; //COUNT(referral_table.referral_id)
}

message GetAffiliateTrendRequest{
  optional RequestMeta request_meta = 1;
  optional TimeSelector time_selector = 2;
}

//Get the revenue, commission, bookings trend within the period
message GetAffiliateTrendResponse{
  optional ResponseMeta response_meta = 1;
  repeated AffiliateCoreTimedStats times_stats = 2;
}

//Admin to view all affiliates
message GetAffiliateListRequest{
  optional RequestMeta request_meta = 1;
  optional TimeSelector time_selector = 2;
}

message GetAffiliateListResponse{
  optional ResponseMeta response_meta = 1;
  repeated AffiliateMeta affiliate_list = 2;
  optional int64 start_time = 3;
  optional int64 end_time = 4;
}

//Admin to view individual affiliate details with list of referrals
message GetAffiliateDetailsByIdRequest{
  optional RequestMeta request_meta = 1;
  optional int64 affiliate_id = 2;
}

message GetAffiliateDetailsByIdResponse{
  optional ResponseMeta response_meta = 1;
  optional AffiliateMeta affiliate_meta = 2;
  repeated ReferralDetails referral_list = 3;
}

message ReferralCoreStats{
  optional int64 citizen_ticket_total = 1;
  optional int64 tourist_ticket_total = 2;
  optional int64 total_commission = 3;
  optional int64 total_clicks = 4;
  optional int64 total_bookings = 5;
}

message ReferralStats{
  optional ReferralCoreStats core_stats = 1;
  optional int64 start_time = 4;
  optional int64 end_time = 5;
}

//Affiliates to view their referral stats
message GetReferralStatsRequest{
  optional RequestMeta request_meta = 1;
  optional int64 affiliate_id = 2;
  optional TimeSelector time_selector = 3;
}

message GetReferralStatsResponse{
  optional ResponseMeta response_meta = 1;
  optional ReferralStats referral_stats = 2;
  optional ReferralStats referral_stats_previous_cycle = 3;
}

message ReferralCoreTimedStats{
  optional string date_string = 1;
  optional int64 citizen_ticket_total = 2;
  optional int64 tourist_ticket_total = 3;
  optional int64 total_commission = 4;
  optional int64 total_clicks = 5;
  optional int64 total_bookings = 6;
}

message GetReferralTrendRequest{
  optional RequestMeta request_meta = 1;
  optional TimeSelector time_selector = 2;
  optional int64 affiliate_id = 3;
}

//Get the revenue, commission, bookings trend within the period
message GetReferralTrendResponse{
  optional ResponseMeta response_meta = 1;
  repeated ReferralCoreTimedStats times_stats = 2;
}

message ReferralClicks{
  optional int64 referral_id = 1;
  optional int64 referral_click_time = 2;
  optional int64 referral_status = 3;
}

message ReferralEarnings{
  optional int64 referral_id = 1;
  optional int64 booking_time = 2;
  optional int64 referral_commission = 3;
  optional int64 booking_ref_id = 4;
}

message ReferralRecent{
  repeated ReferralClicks recent_clicks = 1;
  repeated ReferralEarnings recent_earnings = 2;
  optional int64 start_time = 3;
  optional int64 end_time = 4;
}

//Admin to view top affiliates
message GetReferralRecentListRequest{
  optional RequestMeta request_meta = 1;
}

message GetReferralRecentListResponse{
  optional ResponseMeta response_meta = 1;
  optional ReferralRecent referral_recent = 2;
}

//Affiliates / Admin  to view list of referrals
message GetReferralListRequest{
  optional RequestMeta request_meta = 1;
  optional TimeSelector time_selector = 2;
  optional string affiliate_name = 3;
}

message GetReferralListResponse{
  optional ResponseMeta response_meta = 1;
  repeated ReferralBasic referral_list = 2;
  optional int64 start_time = 3;
  optional int64 end_time = 4;
}

//Admin, Affiliates to view details of referrals
message GetReferralDetailsByReferralIdRequest{
  optional RequestMeta request_meta = 1; //blocks if user id requesting does not own this referral / not admin
  optional int64 referral_id = 2;
}

message GetReferralDetailsByReferralIdResponse{
  optional ResponseMeta response_meta = 1;
  optional ReferralDetails referral_details = 2;
}

message BookingSlot{
  optional int64 slot_id = 1;
  optional int64 slot = 2;
  optional int64 citizen_slot = 3;
  optional int64 tourist_slot = 4;
}

message BookingDates{
  optional string date = 1;
  optional BookingSlot slots = 2;
}

message GetAvailableSlotRequest{
  optional RequestMeta request_meta = 1;
}

//Landing page to get available time slot based on date
message GetAvailableSlotResponse{
  optional ResponseMeta response_meta = 1;
  optional string date = 2;
  repeated BookingSlot booking_slots = 3;
}

message GetBookingListRequest{
  optional RequestMeta request_meta = 1;
  optional TimeSelector time_selector = 2;
}

message GetBookingListResponse{
  optional ResponseMeta response_meta = 1;
  repeated BookingBasic bookings = 2;
  optional int64 start_time = 3;
  optional int64 end_time = 4;
}

message TrackClickResponse{
  optional ResponseMeta response_meta = 1;
  optional int64 referral_id = 2;
}

message GetUserInfoRequest{
  optional RequestMeta request_meta = 1;
}

message GetUserInfoResponse{
  optional ResponseMeta response_meta = 1;
  optional AffiliateProfileMeta affiliate_meta = 2;
  optional User user_info = 3;
}

message UserAuth{
  optional int64 user_id = 1;
  optional string user_password = 2;
}

message UserRegistrationRequest{
  optional RequestMeta request_meta = 1;
  optional string entity_name = 2;
  optional string entity_identifier = 3;
  optional string user_name = 4;
  optional string user_password = 5;
  optional string user_email = 6;
  optional string user_contact = 7;
  optional int64 affiliate_type = 8;
  optional string preferred_referral_code = 9;
}

message UserRegistrationResponse{
  optional ResponseMeta response_meta = 1;
}

message UserAuthenticationRequest{
  optional RequestMeta request_meta = 1;
  optional string user_name = 2;
  optional string user_password = 3;
}

message Tokens{
  optional string access_token = 1;
  optional string refresh_token = 2;
}

message AuthCookie{
  optional int64 user_id = 1;
  optional string user_name = 2;
  optional string user_email = 3;
  optional int64 user_role = 4;
  optional Tokens tokens = 5;
}

message UserAuthenticationResponse{
  optional ResponseMeta response_meta = 1;
  optional AuthCookie auth_cookie = 2;
}

message AffiliateProfileMeta{
  optional int64 affiliate_id = 1;
  optional string entity_name = 2;
  optional string entity_identifier = 3;
  optional int64 affiliate_type = 4;
  optional string unique_referral_code = 5;
  optional int64 referral_count = 6;
  optional int64 referral_clicks = 7;
  optional int64 referral_commission = 8;
  optional int64 total_revenue = 9;
}

message CheckOutTickets{
  optional int64 citizen_ticket_count = 1;
  optional int64 tourist_ticket_count = 2;
}

message CreatePaymentIntentRequest{
  optional RequestMeta request_meta = 1;
  optional CheckOutTickets tickets = 2;
}

message CreatePaymentIntentResponse{
  optional ResponseMeta response_meta = 1;
  optional string client_secret = 2;
}

message TrackCheckOutRequest{
  optional RequestMeta request_meta = 1;
  optional int64 referral_id = 2;
  optional int64 booking_id = 3;
}

message TrackCheckOutResponse{
  optional ResponseMeta response_meta = 1;
  optional BookingDetails booking_details = 2;
}

message UserDeAuthenticationResponse{
  optional ResponseMeta response_meta = 1;
}

message TrackPaymentRequest{
  optional RequestMeta request_meta = 1;
  optional int64 referral_id = 2;
  optional string booking_day = 3;
  optional int64 booking_slot = 4;
  optional int64 citizen_ticket_count = 5;
  optional int64 tourist_ticket_count = 6;
  repeated CustomerInfo customer_info = 7;
}

message TrackPaymentResponse{
  optional ResponseMeta response_meta = 1;
  optional int64 booking_id = 2;
}